--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,15 +2,174 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import geopandas as gpd\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "from shapely.geometry import Point, LineString"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a736ebd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 00_setup_os處理函數\n",
+    "def create_folder(folder_name):\n",
+    "    \"\"\"建立資料夾\"\"\"\n",
+    "    if not os.path.exists(folder_name):\n",
+    "        os.makedirs(folder_name)\n",
+    "    return os.path.abspath(folder_name)\n",
+    "\n",
+    "def findfiles(filefolderpath, filetype='.csv', recursive=True):\n",
+    "    \"\"\"\n",
+    "    尋找指定路徑下指定類型的檔案，並返回檔案路徑列表。\n",
+    "\n",
+    "    Args:\n",
+    "        filefolderpath (str): 指定的檔案路徑。\n",
+    "        filetype (str, optional): 要尋找的檔案類型，預設為 '.csv'。\n",
+    "        recursive (bool, optional): 是否檢索所有子資料夾，預設為 True；反之為False，僅查找當前資料夾的所有file。\n",
+    "\n",
+    "    Returns:\n",
+    "        list: 包含所有符合條件的檔案路徑的列表。\n",
+    "    \"\"\"\n",
+    "    filelist = []\n",
+    "\n",
+    "    if recursive:\n",
+    "        # 遍歷資料夾及其子資料夾\n",
+    "        for root, _, files in os.walk(filefolderpath):\n",
+    "            for file in files:\n",
+    "                if file.endswith(filetype):\n",
+    "                    file_path = os.path.join(root, file)\n",
+    "                    filelist.append(file_path)\n",
+    "    else:\n",
+    "        # 僅檢索當前資料夾\n",
+    "        for file in os.listdir(filefolderpath):\n",
+    "            file_path = os.path.join(filefolderpath, file)\n",
+    "            if os.path.isfile(file_path) and file.endswith(filetype):\n",
+    "                filelist.append(file_path)\n",
+    "\n",
+    "    return filelist\n",
+    "\n",
+    "def read_combined_dataframe(file_list, filepath = True):\n",
+    "    dataframes = []\n",
+    "    \n",
+    "    for file in file_list:\n",
+    "        try:\n",
+    "            if file.endswith('.csv'):\n",
+    "                df = pd.read_csv(file)\n",
+    "            elif file.endswith('.shp'):\n",
+    "                df = gpd.read_file(file)\n",
+    "            elif file.endswith(('.xls', '.xlsx')):\n",
+    "                df = pd.read_excel(file)\n",
+    "            else:\n",
+    "                print(f\"Unsupported file format: {file}\")\n",
+    "                continue\n",
+    "            if filepath:\n",
+    "                df['FilePath'] = file  # 添加來源檔案路徑欄位\n",
+    "            dataframes.append(df)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading {file}: {e}\")\n",
+    "\n",
+    "    # 合併所有 DataFrame\n",
+    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    return combined_df\n",
+    "\n",
+    "# 01_geodataframe 圖像處理\n",
+    "\n",
+    "def dataframe_to_point(df, lon_col, lat_col, crs=\"EPSG:4326\", target_crs=\"EPSG:3826\"):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "    df (dataframe) : 含經緯度座標欄位的dataframe\n",
+    "    lon_col (str) : 緯度欄位\n",
+    "    Lat_col (str) : 經度欄位\n",
+    "    crs (str) : 目前經緯度座標的座標系統，常用的為4326(WGS84)、3826(TWD97)\n",
+    "    target_crs：目標轉換的座標系統\n",
+    "    '''\n",
+    "\n",
+    "    # from shapely.geometry import Point\n",
+    "    # import pandas as pd\n",
+    "    # import geopandas as gpd\n",
+    "    # Create Point geometries from the longitude and latitude columns\n",
+    "    geometry = [Point(xy) for xy in zip(df[lon_col], df[lat_col])]\n",
+    "    # Create a GeoDataFrame with the original CRS\n",
+    "    gdf = gpd.GeoDataFrame(df, geometry=geometry, crs=crs)\n",
+    "    # Convert the GeoDataFrame to the target CRS\n",
+    "    gdf = gdf.to_crs(epsg=target_crs.split(\":\")[1])\n",
+    "    return gdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "71be14f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_gdf_sp_unique(gdf_sp):\n",
+    "    '''因為調查點位同一個名稱的有太多資料調查來源：先取平均'''\n",
+    "\n",
+    "    df_sp_unique = gdf_sp.sort_values(['Name', 'Surveyname']).groupby(['Name']).agg({'X':'mean', 'Y':'mean', 'Surveyname':'first'}).reset_index()\n",
+    "    gdf_sp_unique = dataframe_to_point(df = df_sp_unique, lon_col = 'X', lat_col = 'Y', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
+    "\n",
+    "    return gdf_sp_unique\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e05ba16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 00_Setup 所有全域函數\n",
+    "# 1.) 參數\n",
+    "SL_buffer_meters = 500\n",
+    "\n",
+    "# 2.) 資料input資料夾\n",
+    "referencefolder = os.path.abspath(os.path.join(os.getcwd(), '..', '參考資料'))\n",
+    "seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '00_TDX資料下載'))\n",
+    "SLfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TRTS5屏柵線'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "761a1d72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_sl = gpd.read_file(os.path.join(SLfolder, 'TRTS5_屏柵線線型.shp'))\n",
+    "gdf_sp = gpd.read_file(os.path.join(SLfolder, 'TRTS5_全部調查點位.shp'))\n",
+    "\n",
+    "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826)\n",
+    "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826)\n",
+    "\n",
+    "gdf_sl_buffer = gdf_sl_twd97.buffer(distance=SL_buffer_meters)\n",
+    "\n",
+    "df_seq = read_combined_dataframe(file_list=findfiles(seqfolder))\n",
+    "df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID','Direction', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
+    "if (len(df_seq[df_seq['StopSequence'].isna()]) / len(df_seq) < 0.05):\n",
+    "    df_seq = df_seq[df_seq['StopSequence'].notna()] # 會有沒有站序的\n",
+    "else:\n",
+    "    percentage = ((df_seq[df_seq['StopSequence'].isna()]) / len(df_seq)) * 100\n",
+    "    print(f\"===== 需要檢查沒有站序的站點有哪些，共有{percentage}%的資料沒有站序 =====\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c39ae195",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
