--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a736ebd6",
    "metadata": {},
    "outputs": [],
@@ -107,23 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "71be14f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_gdf_sp_unique(gdf_sp):\n",
-    "    '''因為調查點位同一個名稱的有太多資料調查來源：先取平均'''\n",
-    "\n",
-    "    df_sp_unique = gdf_sp.sort_values(['Name', 'Surveyname']).groupby(['Name']).agg({'X':'mean', 'Y':'mean', 'Surveyname':'first'}).reset_index()\n",
-    "    gdf_sp_unique = dataframe_to_point(df = df_sp_unique, lon_col = 'X', lat_col = 'Y', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
-    "\n",
-    "    return gdf_sp_unique\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "e05ba16d",
    "metadata": {},
    "outputs": [],
@@ -140,36 +124,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "761a1d72",
+   "execution_count": 12,
+   "id": "024b8146",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_sl = gpd.read_file(os.path.join(SLfolder, 'TRTS5_屏柵線線型.shp'))\n",
-    "gdf_sp = gpd.read_file(os.path.join(SLfolder, 'TRTS5_全部調查點位.shp'))\n",
+    "def get_screenline_and_surveypoint(SLfolder):\n",
+    "    gdf_sl = gpd.read_file(os.path.join(SLfolder, 'TRTS5_屏柵線線型.shp'))\n",
+    "    gdf_sp = gpd.read_file(os.path.join(SLfolder, 'TRTS5_全部調查點位.shp'))\n",
     "\n",
-    "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826)\n",
-    "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826)\n",
+    "    gdf_sl['Category'] = gdf_sl['TRTS5'].apply(\n",
+    "        lambda x: 0 if 'CD' in x else 1 if 'SL' in x else None\n",
+    "    )\n",
+    "    gdf_sl['Number'] = (\n",
+    "        gdf_sl['TRTS5']\n",
+    "        .str.extract(r'(\\d+)')\n",
+    "        .astype(int)\n",
+    "    )\n",
+    "    gdf_sl = gdf_sl.sort_values(['Category', 'Number'])\n",
+    "    return gdf_sl, gdf_sp\n",
     "\n",
-    "gdf_sl_buffer = gdf_sl_twd97.buffer(distance=SL_buffer_meters)\n",
+    "def get_gdf_sp_unique(gdf_sp):\n",
+    "    '''因為調查點位同一個名稱的有太多資料調查來源：先取平均'''\n",
     "\n",
-    "df_seq = read_combined_dataframe(file_list=findfiles(seqfolder))\n",
-    "df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID','Direction', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
-    "if (len(df_seq[df_seq['StopSequence'].isna()]) / len(df_seq) < 0.05):\n",
-    "    df_seq = df_seq[df_seq['StopSequence'].notna()] # 會有沒有站序的\n",
-    "else:\n",
-    "    percentage = ((df_seq[df_seq['StopSequence'].isna()]) / len(df_seq)) * 100\n",
-    "    print(f\"===== 需要檢查沒有站序的站點有哪些，共有{percentage}%的資料沒有站序 =====\")\n",
+    "    df_sp_unique = gdf_sp.sort_values(['Name', 'Surveyname']).groupby(['Name']).agg({'X':'mean', 'Y':'mean', 'Surveyname':'first'}).reset_index()\n",
+    "    gdf_sp_unique = dataframe_to_point(df = df_sp_unique, lon_col = 'X', lat_col = 'Y', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
+    "\n",
+    "    return gdf_sp_unique\n",
+    "\n",
+    "def get_gdf_seq(seqfolder):\n",
+    "    '''讀取公車站序並轉為geodataframe\n",
+    "    seqfolder(str):站序點位資料csv所在資料夾'''\n",
+    "    df_seq = read_combined_dataframe(file_list=findfiles(seqfolder))\n",
+    "    df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID','Direction', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
+    "    if (len(df_seq[df_seq['StopSequence'].isna()]) / len(df_seq) < 0.05):\n",
+    "        df_seq = df_seq[df_seq['StopSequence'].notna()] # 會有沒有站序的\n",
+    "        gdf_seq = dataframe_to_point(df = df_seq, lon_col='PositionLon', lat_col= 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
+    "    else:\n",
+    "        percentage = ((df_seq[df_seq['StopSequence'].isna()]) / len(df_seq)) * 100\n",
+    "        print(f\"===== 需要檢查沒有站序的站點有哪些，共有{percentage}%的資料沒有站序 =====\")\n",
+    "\n",
+    "    return gdf_seq\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39ae195",
+   "id": "761a1d72",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 讀取模型編修組提供的屏柵線 & 調查點位\n",
+    "gdf_sl, gdf_sp = get_screenline_and_surveypoint(SLfolder=SLfolder)\n",
+    "\n",
+    "# 因為提供的點位有分路段，所以先改為同一個地點\n",
+    "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826)\n",
+    "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826).reindex(columns = ['TRTS5', 'Category', 'Number', 'geometry']) # 轉換為TWD97處理\n",
+    "\n",
+    "\n",
+    "# 屏柵線取buffer\n",
+    "gdf_sl_buffer = gdf_sl_twd97.copy()\n",
+    "gdf_sl_buffer['geometry'] = gdf_sl_buffer.geometry.buffer(SL_buffer_meters)\n",
+    "\n",
+    "\n",
+    "gdf_seq = get_gdf_seq(SLfolder=SLfolder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8a814a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_seq"
+   ]
   }
  ],
  "metadata": {
