fix : GDF_ROUTEPAIR add the StopUID

--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "a736ebd6",
    "metadata": {},
    "outputs": [],
@@ -102,12 +102,33 @@
     "    gdf = gpd.GeoDataFrame(df, geometry=geometry, crs=crs)\n",
     "    # Convert the GeoDataFrame to the target CRS\n",
     "    gdf = gdf.to_crs(epsg=target_crs.split(\":\")[1])\n",
-    "    return gdf"
+    "    return gdf\n",
+    "\n",
+    "def get_line(df, x1 = 'Lon_o', x2 = 'Lon_d', y1 = 'Lat_o', y2 = 'Lat_d'):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "    df (dataframe) : 含經緯度座標欄位的dataframe\n",
+    "    x1 (str) : 起點經度欄位\n",
+    "    y1 (str) : 起點緯度欄位\n",
+    "    x2 (str) : 迄點經度欄位\n",
+    "    y2 (str) : 迄點緯度欄位\n",
+    "\n",
+    "    預設立場：輸出為wgs84轉換的經緯度點位\n",
+    "    '''\n",
+    "    # from shapely.geometry import LineString\n",
+    "    # import pandas as pd\n",
+    "    # import geopandas as gpd\n",
+    "    df['geometry'] = df.apply(lambda row: LineString([(row[x1], row[y1]), (row[x2], row[y2])]), axis=1)\n",
+    "    gdf = gpd.GeoDataFrame(df, geometry='geometry')\n",
+    "    # 設定座標系統 (假設 WGS 84 / EPSG:4326)\n",
+    "    gdf.set_crs(epsg=4326, inplace=True)\n",
+    "    return gdf\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "e05ba16d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "id": "024b8146",
    "metadata": {},
    "outputs": [],
@@ -170,7 +191,8 @@
     "    '''讀取公車站序並轉為geodataframe\n",
     "    seqfolder(str):站序點位資料csv所在資料夾'''\n",
     "    df_seq = read_combined_dataframe(file_list=findfiles(seqfolder))\n",
-    "    df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID','Direction', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
+    "    df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID','Direction','StopUID', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
+    "    df_seq = df_seq.drop_duplicates(subset= ['RouteUID', 'SubRouteUID','Direction', 'StopSequence', 'PositionLon', 'PositionLat'])\n",
     "    if (len(df_seq[df_seq['StopSequence'].isna()]) / len(df_seq) < 0.05):\n",
     "        df_seq = df_seq[df_seq['StopSequence'].notna()] # 會有沒有站序的\n",
     "    else:\n",
@@ -178,12 +200,56 @@
     "        print(f\"===== 需要檢查沒有站序的站點有哪些，共有{percentage}%的資料沒有站序 =====\")\n",
     "\n",
     "    return df_seq\n",
+    "\n",
+    "def get_gdfroutepair(df_seq):\n",
+    "    # 先排序，確保順序正確\n",
+    "    df_seq = df_seq.sort_values(\n",
+    "        by=['RouteUID', 'SubRouteUID', 'Direction', 'StopSequence']\n",
+    "    )\n",
+    "\n",
+    "    # 建立 To 欄位（往下一站）\n",
+    "    df_seq['ToStop'] = df_seq.groupby(\n",
+    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "    )['StopUID'].shift(-1)\n",
+    "\n",
+    "    df_seq['ToSeq'] = df_seq.groupby(\n",
+    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "    )['StopSequence'].shift(-1)\n",
+    "\n",
+    "    df_seq['ToLon'] = df_seq.groupby(\n",
+    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "    )['PositionLon'].shift(-1)\n",
+    "\n",
+    "    df_seq['ToLat'] = df_seq.groupby(\n",
+    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "    )['PositionLat'].shift(-1)\n",
+    "\n",
+    "    # 建立 From 欄位（本站）\n",
+    "    df_seq['FromSeq'] = df_seq['StopSequence']\n",
+    "    df_seq['FromLon'] = df_seq['PositionLon']\n",
+    "    df_seq['FromLat'] = df_seq['PositionLat']\n",
+    "    df_seq['FromStop'] = df_seq['StopUID']\n",
+    "\n",
+    "    # 只保留需要的欄位\n",
+    "    df_result = df_seq.reindex(columns = [\n",
+    "        'RouteUID', 'SubRouteUID', 'Direction',\n",
+    "        'FromStop', 'FromSeq', 'FromLon', 'FromLat',\n",
+    "        'ToStop', 'ToSeq', 'ToLon', 'ToLat'])\n",
+    "\n",
+    "    # 移除最後一站（沒有 To）\n",
+    "    df_result = df_result.dropna(subset=['ToSeq'])\n",
+    "\n",
+    "    df_result = df_result.reset_index(drop=True)\n",
+    "\n",
+    "    gdf_result = get_line(df_result, x1 = 'FromLon', x2 = 'ToLon', y1 = 'FromLat', y2 = 'ToLat')\n",
+    "\n",
+    "    return gdf_result\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "id": "761a1d72",
    "metadata": {},
    "outputs": [],
@@ -203,7 +269,9 @@
     "# 取得公車站序\n",
     "df_seq = get_df_seq(seqfolder=seqfolder)\n",
     "gdf_seq = dataframe_to_point(df = df_seq, lon_col='PositionLon', lat_col= 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
-    "\n"
+    "\n",
+    "# 取得公車路線pair直線\n",
+    "gdf_routepair = get_gdfroutepair(df_seq)"
    ]
   }
  ],
