fix:GET_LINE function add the target CRS to setup the geodataframe crs

--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "a736ebd6",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
     "    gdf = gdf.to_crs(epsg=target_crs.split(\":\")[1])\n",
     "    return gdf\n",
     "\n",
-    "def get_line(df, x1 = 'Lon_o', x2 = 'Lon_d', y1 = 'Lat_o', y2 = 'Lat_d'):\n",
+    "def get_line(df, x1 = 'Lon_o', x2 = 'Lon_d', y1 = 'Lat_o', y2 = 'Lat_d', target_crs = \"EPSG:3826\"):\n",
     "    '''\n",
     "    Parameters:\n",
     "    df (dataframe) : 含經緯度座標欄位的dataframe\n",
@@ -122,13 +122,14 @@
     "    gdf = gpd.GeoDataFrame(df, geometry='geometry')\n",
     "    # 設定座標系統 (假設 WGS 84 / EPSG:4326)\n",
     "    gdf.set_crs(epsg=4326, inplace=True)\n",
+    "    gdf = gdf.to_crs(epsg=target_crs.split(\":\")[1])\n",
     "    return gdf\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "e05ba16d",
    "metadata": {},
    "outputs": [],
@@ -136,6 +137,7 @@
     "# 00_Setup 所有全域函數\n",
     "# 1.) 參數\n",
     "SL_buffer_meters = 500\n",
+    "SP_buffer_meters = 100\n",
     "\n",
     "# 2.) 資料input資料夾\n",
     "referencefolder = os.path.abspath(os.path.join(os.getcwd(), '..', '參考資料'))\n",
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "024b8146",
    "metadata": {},
    "outputs": [],
@@ -244,34 +246,311 @@
     "    gdf_result = get_line(df_result, x1 = 'FromLon', x2 = 'ToLon', y1 = 'FromLat', y2 = 'ToLat')\n",
     "\n",
     "    return gdf_result\n",
+    "\n",
+    "def buffer_distance(gdf, buffermeters):\n",
+    "    gdf = gdf.copy()\n",
+    "    gdf['geometry'] = gdf.geometry.buffer(buffermeters)\n",
+    "    return gdf \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "id": "761a1d72",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. 讀取資料\n",
     "# 讀取模型編修組提供的屏柵線 & 調查點位\n",
     "gdf_sl, gdf_sp = get_screenline_and_surveypoint(SLfolder=SLfolder)\n",
-    "\n",
-    "# 因為提供的點位有分路段，所以先改為同一個地點\n",
-    "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826)\n",
+    "# 轉為TWD97 (EPSG:3826) 才能使用buffer功能\n",
+    "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826) # 因為提供的點位有分路段，所以先改為同一個地點\n",
     "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826).reindex(columns = ['TRTS5', 'Category', 'Number', 'geometry']) # 轉換為TWD97處理\n",
-    "\n",
-    "\n",
-    "# 屏柵線取buffer\n",
-    "gdf_sl_buffer = gdf_sl_twd97.copy()\n",
-    "gdf_sl_buffer['geometry'] = gdf_sl_buffer.geometry.buffer(SL_buffer_meters)\n",
-    "\n",
     "# 取得公車站序\n",
     "df_seq = get_df_seq(seqfolder=seqfolder)\n",
     "gdf_seq = dataframe_to_point(df = df_seq, lon_col='PositionLon', lat_col= 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
     "\n",
-    "# 取得公車路線pair直線\n",
-    "gdf_routepair = get_gdfroutepair(df_seq)"
+    "\n",
+    "# 2. Buffer初步確認那些會經過調查點位\n",
+    "gdf_routepair = get_gdfroutepair(df_seq) # 取得公車路線pair直線\n",
+    "gdf_sl_buffer = buffer_distance(gdf=gdf_sl_twd97, buffermeters=SL_buffer_meters) # 屏柵線取buffer\n",
+    "gdf_sp_buffer = buffer_distance(gdf=gdf_sp_unique, buffermeters=SP_buffer_meters) # 調查點位取buffer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "239e9665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RouteUID</th>\n",
+       "      <th>SubRouteUID</th>\n",
+       "      <th>Direction</th>\n",
+       "      <th>FromStop</th>\n",
+       "      <th>FromSeq</th>\n",
+       "      <th>FromLon</th>\n",
+       "      <th>FromLat</th>\n",
+       "      <th>ToStop</th>\n",
+       "      <th>ToSeq</th>\n",
+       "      <th>ToLon</th>\n",
+       "      <th>ToLat</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KEE306661</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>121.738670</td>\n",
+       "      <td>25.131280</td>\n",
+       "      <td>KEE306737</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>121.740275</td>\n",
+       "      <td>25.129851</td>\n",
+       "      <td>LINESTRING (324483.254 2780522.417, 324645.967...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KEE306737</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>121.740275</td>\n",
+       "      <td>25.129851</td>\n",
+       "      <td>KEE306736</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>121.736985</td>\n",
+       "      <td>25.130240</td>\n",
+       "      <td>LINESTRING (324645.967 2780365.014, 324313.971...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KEE306736</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>121.736985</td>\n",
+       "      <td>25.130240</td>\n",
+       "      <td>KEE309534</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>121.739089</td>\n",
+       "      <td>25.133076</td>\n",
+       "      <td>LINESTRING (324313.971 2780406.287, 324524.415...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KEE309534</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>121.739089</td>\n",
+       "      <td>25.133076</td>\n",
+       "      <td>KEE309535</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>121.740028</td>\n",
+       "      <td>25.134482</td>\n",
+       "      <td>LINESTRING (324524.415 2780721.591, 324618.246...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KEE0155</td>\n",
+       "      <td>KEE015501</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KEE309535</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>121.740028</td>\n",
+       "      <td>25.134482</td>\n",
+       "      <td>KEE306730</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>121.740820</td>\n",
+       "      <td>25.135696</td>\n",
+       "      <td>LINESTRING (324618.246 2780877.852, 324697.369...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171964</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TPE18253</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>121.550862</td>\n",
+       "      <td>25.024273</td>\n",
+       "      <td>TPE18255</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>121.553535</td>\n",
+       "      <td>25.023243</td>\n",
+       "      <td>LINESTRING (305593.622 2768579.101, 305863.816...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171965</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TPE18255</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>121.553535</td>\n",
+       "      <td>25.023243</td>\n",
+       "      <td>TPE18257</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>121.555911</td>\n",
+       "      <td>25.021034</td>\n",
+       "      <td>LINESTRING (305863.816 2768466.181, 306104.654...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171966</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TPE18257</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>121.555911</td>\n",
+       "      <td>25.021034</td>\n",
+       "      <td>TPE18259</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>121.557804</td>\n",
+       "      <td>25.019261</td>\n",
+       "      <td>LINESTRING (306104.654 2768222.458, 306296.568...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171967</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TPE18259</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>121.557804</td>\n",
+       "      <td>25.019261</td>\n",
+       "      <td>TPE57540</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>121.558530</td>\n",
+       "      <td>25.018250</td>\n",
+       "      <td>LINESTRING (306296.568 2768026.83, 306370.262 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171968</th>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>TPE810</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TPE57540</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>121.558530</td>\n",
+       "      <td>25.018250</td>\n",
+       "      <td>TPE18261</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>121.561041</td>\n",
+       "      <td>25.015473</td>\n",
+       "      <td>LINESTRING (306370.262 2767915.167, 306624.967...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>171969 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       RouteUID SubRouteUID  Direction   FromStop  FromSeq     FromLon  \\\n",
+       "0       KEE0155   KEE015501          0  KEE306661      1.0  121.738670   \n",
+       "1       KEE0155   KEE015501          0  KEE306737      2.0  121.740275   \n",
+       "2       KEE0155   KEE015501          0  KEE306736      3.0  121.736985   \n",
+       "3       KEE0155   KEE015501          0  KEE309534      4.0  121.739089   \n",
+       "4       KEE0155   KEE015501          0  KEE309535      5.0  121.740028   \n",
+       "...         ...         ...        ...        ...      ...         ...   \n",
+       "171964   TPE810      TPE810          1   TPE18253     40.0  121.550862   \n",
+       "171965   TPE810      TPE810          1   TPE18255     41.0  121.553535   \n",
+       "171966   TPE810      TPE810          1   TPE18257     42.0  121.555911   \n",
+       "171967   TPE810      TPE810          1   TPE18259     43.0  121.557804   \n",
+       "171968   TPE810      TPE810          1   TPE57540     44.0  121.558530   \n",
+       "\n",
+       "          FromLat     ToStop  ToSeq       ToLon      ToLat  \\\n",
+       "0       25.131280  KEE306737    2.0  121.740275  25.129851   \n",
+       "1       25.129851  KEE306736    3.0  121.736985  25.130240   \n",
+       "2       25.130240  KEE309534    4.0  121.739089  25.133076   \n",
+       "3       25.133076  KEE309535    5.0  121.740028  25.134482   \n",
+       "4       25.134482  KEE306730    6.0  121.740820  25.135696   \n",
+       "...           ...        ...    ...         ...        ...   \n",
+       "171964  25.024273   TPE18255   41.0  121.553535  25.023243   \n",
+       "171965  25.023243   TPE18257   42.0  121.555911  25.021034   \n",
+       "171966  25.021034   TPE18259   43.0  121.557804  25.019261   \n",
+       "171967  25.019261   TPE57540   44.0  121.558530  25.018250   \n",
+       "171968  25.018250   TPE18261   45.0  121.561041  25.015473   \n",
+       "\n",
+       "                                                 geometry  \n",
+       "0       LINESTRING (324483.254 2780522.417, 324645.967...  \n",
+       "1       LINESTRING (324645.967 2780365.014, 324313.971...  \n",
+       "2       LINESTRING (324313.971 2780406.287, 324524.415...  \n",
+       "3       LINESTRING (324524.415 2780721.591, 324618.246...  \n",
+       "4       LINESTRING (324618.246 2780877.852, 324697.369...  \n",
+       "...                                                   ...  \n",
+       "171964  LINESTRING (305593.622 2768579.101, 305863.816...  \n",
+       "171965  LINESTRING (305863.816 2768466.181, 306104.654...  \n",
+       "171966  LINESTRING (306104.654 2768222.458, 306296.568...  \n",
+       "171967  LINESTRING (306296.568 2768026.83, 306370.262 ...  \n",
+       "171968  LINESTRING (306370.262 2767915.167, 306624.967...  \n",
+       "\n",
+       "[171969 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_routepair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a467780b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_sp_buffer = gdf_sp_unique.copy()\n",
+    "gdf_sp_buffer['geometry'] = gdf_sp_buffer.geometry.buffer(SL_buffer_meters)"
    ]
   }
  ],
